--- a/res/application/views/components/boton_telefono.html.twig
+++ b/res/application/views/components/boton_telefono.html.twig
@@ -2,7 +2,7 @@
     <div class="col-xs-12">
         <button class="btn btn-block btn-lg color-naranja">
         <i class="fa fa-phone"></i>
-        <a href="tel:3183185458" class="color-naranja">3183185458</a>
+        <a href="tel:{{usuario.celular}}" class="color-naranja">{{usuario.celular}}</a>
         </button>
     </div>
 </div>
