--- a/res/application/views/components/top_menu.html.twig
+++ b/res/application/views/components/top_menu.html.twig
@@ -4,16 +4,31 @@
 		<img src="{{ img_url() }}proveedor-com-co-logo-empresas-haciendo-negocios.png" class="imagen">
 	</a>
     <p class="texto pull-right">
-			<a href="JavaScript:launch(this);">
+    
+        {% if not logued %}		    
+            <a href="JavaScript:launch(this);">
 				<i class="fa fa-pencil icono"></i>
 				Registro Gratis
-			</a>
+			</a>    
+		{% else %}        
+			<a class="enlaces" href="{{base_url()}}tablero_usuario">
+				<i class="fa fa-desktop"></i>
+					Tablero Usuario
+			</a>                
+		{% endif %}
 		</p>
 		<p class="texto pull-right">
+        {% if not logued %}       
 			<a href="JavaScript:login(this,'false');">
 				<i class="fa fa-user icono"></i>
 				Ingresar
+			</a>            
+		{% else %}
+             <a class="enlaces" href="{{base_url()}}logueo/logout">
+				<i class="fa fa-sign-out"></i>
+				Salir
 			</a>
+		{% endif %}
 		</p>
 	</div>
 </div>
