--- a/res/application/views/components/vision.html.twig
+++ b/res/application/views/components/vision.html.twig
@@ -1,3 +1,4 @@
+{% if not (empresa.vision=='') %}
 <div class="row">
 	<div class="col-xs-12 vision">
         <h4 class="font-naranja titulo"><i class="glyphicon glyphicon-flag ico_bandera"></i>VISIÓN</h4>
@@ -6,3 +7,4 @@
 	<!-- /.col-xs-12 -->
 </div>
 <!-- /.row -->
+{% endif %}
