--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -33,14 +33,14 @@
     {% include "components/navbar_empresa.html.twig" %}
     <h3>
         <i class="fa fa-download font-naranja"></i>
-        <strong>Catálogo - Productos principales</strong>
+        <strong>Descargar Catálogos</strong>
     </h3>
     <hr>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     
     {% include "components/lista_catalogos.html.twig" %}
     {% include "components/paginador.html.twig" %}
-    {% include "components/boton_solicitar_cotizacion.html.twig" %}
+    <!--{% include "components/boton_solicitar_cotizacion.html.twig" %}-->
     <div class="row">
         <div class="col-xs-6" style="padding-right: 1px">
             {% include "components/boton_contactar.html.twig" %}
