--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -27,6 +27,18 @@
 {
     height: 100px;
 }
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 135px;
+}
+
+.banners-img 
+{
+    max-height: 100%;
+    max-width: 100%!important;
+}
 .content-slider
 {
     height: 120px;
