--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -2,7 +2,7 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="titulos font-naranja"><strong>{{ empresa.nombre|title }}</strong></h2>
+                <h2 class="titulos font-naranja"><strong>{{ empresa.nombre }}</strong></h2>
             </div>
         </div>
         <div class="row">
