--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -29,6 +29,7 @@
 <!-- ./row -->
 
 <style>
+/*Tengo mis dudas de estos estilos aca, TODO: Mover estos estilos al archivo adecuado *LCM */
 .banners
 {
     height: 100px;
