--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -887,6 +887,8 @@ a{
     width: 270px;
     line-height: 1;
     color: #ccc;
+    overflow: hidden;
+    max-height: 26px;
 }
 .text-publicarPro{
 	display: inline-block;
