Centrar imagenes del banner

--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12 productos_principales">
-        <h3 class="titulos"><strong>Productos Principales</strong></h3>
+        <h3 class="titulos">Productos Principales</h3>
         <div class="slider_producto">
             {% for producto in productos %}
                 <div class="item_slider_producto">
