--- a/res/application/views/components/slider-touch-productos.html.twig
+++ b/res/application/views/components/slider-touch-productos.html.twig
@@ -6,7 +6,7 @@
 {% if able %}
     <div class="row">
         <div class="col-xs-12">
-            <h3 class="titulos"><strong>Galería de Imágenes.</strong></h3>
+            <h3 class="titulos">Galería de Imágenes</h3>
             <div class="multiple-items slider-imagenes">
             {% set count=0 %}
                 {% for imagen in imagenes %}
