--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -5,7 +5,7 @@
 {% if able %}
     <div class="row">
         <div class="col-xs-12">
-            <h3 class="titulos"><strong>Videos de la Empresa</strong></h3>
+            <h3 class="titulos">Videos de la Empresa</h3>
             <div class="multiple-items">
             <!-- cada item necesita de la imagen miniatura del video y el video como tal en la etiqueta img va la imagen https://i.ytimg.com/vi/AQUI_ID/hqdefault.jpg y en la etiqueta a atributo href va el link del video -->
             {% for video in videos %}  
