--- a/res/application/views/components/etiquetas.html.twig
+++ b/res/application/views/components/etiquetas.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <h3 class="titulos"><strong>Etiquetas</strong></h3>
+        <h3 class="titulos">Etiquetas</h3>
         <ul class="tags">
         {% for targget in tag %} 
             {% if not (targget == '') %}
