--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -13,6 +13,12 @@
                 </span>
             </div>
             <div class="col-xs-12">
+                <i class="fa fa-map-marker fa-lg fa-fw font-naranja"></i> 
+                <span>
+                     {{ usuario.ciudad|title }}
+                </span>
+            </div>
+            <div class="col-xs-12">
                 <img class="img_verificacion" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
                 alt="Icono Membresia" width="19px">
                 <span class="texto-membresia">
