Tecla atras cierra el popup del video

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -22,7 +22,7 @@
     <meta name="twitter:title" content="">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="">
-    
+
     <meta name="description" content="">
 {% endblock meta %}
 
@@ -63,6 +63,7 @@
     <br>
     <div class="row separator"></div>
     {% include "components/etiquetas.html.twig" %} 
+    {% include "components/footer.html.twig" %} 
 {% endblock content %}
 
 {% block javascripts %}
