--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -242,7 +242,7 @@ img.img_verificacion {
   margin-bottom: 15px;
 }
 .btn:hover {
-  color: #F9C0C0;
+  color: #FFF;
   text-decoration: none;
 }
 a:hover {
