cambiar titulo a Productos y le quité el tipo negrita en catalogo de productos

--- a/res/application/views/empresa/catalogo_movil.html.twig
+++ b/res/application/views/empresa/catalogo_movil.html.twig
@@ -31,9 +31,9 @@
     {% include "components/header_empresa.html.twig" %}
     {% set catalogo_producto = true %}
     {% include "components/navbar_empresa.html.twig" %}
-        <h3><i class="fa fa-list font-naranja"></i> <strong>Productos Principales</strong></h3>
-        <hr>
+        <h3><i class="fa fa-list font-naranja"></i> Productos</h3>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
+    <hr>
     {% include "components/lista_productos.html.twig" %}
     {% include "components/paginador.html.twig" %}
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
