Agrandar tamaño de flecha

--- a/res/application/views/components/lista_productos.html.twig
+++ b/res/application/views/components/lista_productos.html.twig
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <a href="{{ base_url() }}producto/ver/{{ producto.id }}">
-                            <i class="pull-right font-naranja glyphicon glyphicon-chevron-right"></i>
+                        <i class="fa fa-lg fa-chevron-right pull-right font-naranja " aria-hidden="true" style="font-size: 2em;"></i>
                         </a>
                     </div>
                 </div>
