Bajar boton de descargar en pestaña descargar catalogo

--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -245,6 +245,11 @@ img.img_verificacion {
   color: #FFF;
   text-decoration: none;
 }
+.btn.focus, .btn:focus, .btn:hover {
+    color: #FFF;
+    text-decoration: none;
+}
+
 a:hover {
   color: #FFF;
   text-decoration: underline;
