--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -52,6 +52,7 @@
         </div>
     </div>
     <br>
+    {% include "components/redes_sociales.html.twig" %}
     {# Slider videos #}
     {% include "components/slider-touch-videos.html.twig" %}
     <br>
