Agregada la categoria con su respectivo icono

--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -13,9 +13,9 @@
                 </span>
             </div>
             <div class="col-xs-12">
-                <i class="fa fa-map-marker fa-lg fa-fw font-naranja"></i> 
+                <i class="fa fa-list fa-lg fa-fw font-naranja"></i> 
                 <span>
-                     {{ usuario.ciudad|title }}
+                    {{empresa.categoria|title}}
                 </span>
             </div>
             <div class="col-xs-12">
