Agregar espacio despues del paginador

--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -30,8 +30,7 @@
     {% set nosotros = true %}
     {% include "components/navbar_empresa.html.twig" %}
     <h3 class="titulos">
-        <i class="fa fa-briefcase font-naranja"></i>
-        <strong>Nuestra Empresa</strong>
+        <i class="fa fa-briefcase font-naranja"></i> Nuestra Empresa
     </h3>
     <hr>
     {% include "components/mision.html.twig" %}
@@ -48,6 +47,7 @@
     </div>
     {% include "components/redes_sociales.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
+    <br>
     {% include "components/contacto.html.twig" %}
     <br>
     <hr>
