Cuando no haya productos ni catalogos hay que mostrar otra pagina

--- a/res/application/views/empresa/contacto_movil.html.twig
+++ b/res/application/views/empresa/contacto_movil.html.twig
@@ -31,11 +31,12 @@
     {% include "components/navbar_empresa.html.twig" %}
     <h3 class="titulos">
         <i class="fa fa-phone font-naranja"></i>
-        <strong>Contáctenos</strong>
+        Contáctenos
     </h3>
     {% include "components/boton_contactenos.html.twig" %}
     <hr>
     {% include "components/contacto.html.twig" %}
+    <br>
     <div class="row">
         <div class="col-xs-6" style="padding-right: 1px">
             {% include "components/boton_contactar.html.twig" %}
@@ -46,7 +47,6 @@
     </div>
     {% include "components/redes_sociales.html.twig" %}
     <hr>
-    <br>
     {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
