--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -33,7 +33,7 @@
     {% include "components/navbar_empresa.html.twig" %}
     <h3>
         <i class="fa fa-download font-naranja"></i>
-        <strong>Descargar Catálogos</strong>
+        Descargar Catálogos
     </h3>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     <hr>
