--- a/res/application/views/components/lista_catalogos.html.twig
+++ b/res/application/views/components/lista_catalogos.html.twig
@@ -22,7 +22,7 @@
             </div>
             <hr>
         {% else %}
-            <div class="row">
+            <div class="row" style="margin-bottom: 230px;">
                 <div class="col-xs-12">
                     <p>La empresa no ha publicado catalogos</p>
                 </div>
