--- a/res/application/views/components/lista_productos.html.twig
+++ b/res/application/views/components/lista_productos.html.twig
@@ -48,7 +48,7 @@
             </div>
             <hr>
         {% else %}
-            <div class="row">
+            <div class="row" style="margin-bottom: 230px;">
                 <div class="col-xs-12">
                     <p>La empresa no ha publicado productos</p>
                 </div>
