--- a/res/application/views/components/lista_productos.html.twig
+++ b/res/application/views/components/lista_productos.html.twig
@@ -9,11 +9,9 @@
                     </a>
                 </div>
                 <div class="col-xs-8">
-                    <h4>
-                        <a href="{{ base_url() }}producto/ver/{{ producto.id }}">
-                            <strong>
-                                {{ producto.nombre }}
-                            </strong>
+                    <h4 class="elipse">
+                        <a class="font-black" href="{{ base_url() }}producto/ver/{{ producto.id }}" >
+                            {{ producto.nombre }}
                         </a>
                     </h4>
                     <div>
