Ajuste del index para que se vea el mismo margen a cada lado

--- a/res/assets/css/index/index.css
+++ b/res/assets/css/index/index.css
@@ -282,3 +282,6 @@ a.nombre_producto{
 	font-size: 13px;
 }
 /*---------------------------------------*/
+.col-md-12.col-sm-12.col-xs-12 {
+    padding-right: 5px;
+}
