Meta etiquetas para seo

--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -24,6 +24,10 @@
     <meta name="twitter:title" content="">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="">
+
+    <!-- Aca se debe imprimir la descripción corta y las etiquetas -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 {% endblock meta %}
 
 {% block content %}
