Agregadas las dependencias de composer

--- a/res/application/views/components/redes_sociales.html.twig
+++ b/res/application/views/components/redes_sociales.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <h3 class="titulos">Redes sociales</h3>
+        <h3 class="titulos">Compartir</h3>
         <div class="botones-sociales">
             <ul class="list-inline center-block text-center">
             <li>
