--- a/res/application/views/empresa/catalogo_movil.html.twig
+++ b/res/application/views/empresa/catalogo_movil.html.twig
@@ -41,6 +41,9 @@
     {% include "components/paginador.html.twig" %}
     <br>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
+    <hr>
+    {% include "components/redes_sociales.html.twig" %}
+    <hr>
     <div class="row">
         <div class="col-xs-6" style="padding-right: 1px">
             {% include "components/boton_contactar.html.twig" %}
