--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -22,8 +22,9 @@
     <meta name="twitter:title" content="">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="">
-    <!-- Aca se debe imprimir la descripción corta y las etiquetas -->
+    <!-- Aca se debe imprimir la descripción corta (Crear la descripción con indicaciones de Andres) -->
     <meta name="description" content="">
+    <!-- las etiquetas -->
     <meta name="keywords" content="">
 {% endblock meta %}
 
