agrega gado los metatag, necesrios para SEO y/o compartir/redes sociales

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -9,23 +9,7 @@
     <link rel="stylesheet" href="{{assets_url()}}swipebox/css/swipebox.min.css">
 {% endblock styles %}
 {% block meta %}
-    {# Aqui se debe agregar la información para el contenido que se comparte en redes sociales, si necesita ayuda de como identificar el contenido por favor verifique en https://developers.facebook.com/docs/sharing/webmasters#markup y https://dev.twitter.com/cards/types/summary-large-image #}
-    <meta property ="og:url" content="" />
-    <meta property ="og:type" content="" />
-    <meta property ="og:title" content="" />
-    <meta property ="og:description"  content="" />
-    <meta property ="og:image"  content="" />
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="">
-    <meta name="twitter:creator" content="@">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
-    <!-- Aca se debe imprimir la descripción corta (Crear la descripción con indicaciones de Andres) -->
-    <meta name="description" content="">
-    <!-- las etiquetas -->
-    <meta name="keywords" content="">
+    {% include "components/SEO.html.twig" %}
 {% endblock meta %}
 
 {% block content %}
