--- a/res/assets/css/pagina_producto.css
+++ b/res/assets/css/pagina_producto.css
@@ -158,7 +158,7 @@
 	height: 50px;
 	text-align: center;
 	text-decoration: none;
-	background: #00A2E8;
+	background: #1D71B8;
 	padding-top: 9px;
 	border-radius: 6px;
 }
@@ -259,7 +259,7 @@
 .pagina_producto .boton_llamada{
 	padding-left: 0;
 	padding-right: 0;
-	background: #00A2E8;
+	background: #1D71B8;
 	height: 40px;
 	text-align: center;
 	padding-top: 7px;
