--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -11,23 +11,7 @@
         
 {% endblock styles %}
 {% block meta %}
-    {# Aqui se deben agregar la información para el contenido que se comparte en redes sociales, si necesita ayuda de como identificar el contenido por favor verifique en https://developers.facebook.com/docs/sharing/webmasters#markup y https://dev.twitter.com/cards/types/summary-large-image #}
-    <meta property ="og:url" content="" />
-    <meta property ="og:type" content="" />
-    <meta property ="og:title" content="" />
-    <meta property ="og:description"  content="" />
-    <meta property ="og:image"  content="" />
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="">
-    <meta name="twitter:creator" content="@">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
-
-    <!-- Aca se debe imprimir la descripción corta y las etiquetas -->
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    {% include "components/SEO.html.twig" %}
 {% endblock meta %}
 
 {% block content %}
