Pasé a componentes el script de los botones de redes sociales para mas facil edición

--- a/res/application/views/empresa/catalogo_movil.html.twig
+++ b/res/application/views/empresa/catalogo_movil.html.twig
@@ -44,18 +44,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{js_url()}}social.js"></script>
-    <script>
-        jQuery(document).ready(function($) {
-           $('.share').ShareLink({
-                // se deben llenar los datos para compartir con los botones
-                title: 'Lorem', 
-                text: 'Lorem ipsum dolor sit amet', 
-                image: '', 
-                url: '', 
-                width: 640, 
-                height: 480 
-            }) 
-        });
-    </script>
+    {% include "components/script.html.twig" %}
 {% endblock javascripts %}
