--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -47,4 +47,5 @@
     {# Libreria para sliders #}
     <script src="{{ assets_url() }}slick/slick/slick.min.js" ></script>
     <script src="{{js_url()}}slider.js"></script>
+    {% include "components/script.html.twig" %}
 {% endblock javascripts %}
