--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -58,20 +58,8 @@
     {{ parent() }}
     {# Libreria para sliders #}
     <script src="{{ assets_url() }}slick/slick/slick.min.js" ></script>
-    <script src="{{ assets_url() }}swipebox/js/jquery.swipebox.min.js"></script>
-    <script src="{{js_url()}}inicio-movil.js"></script>
-    <script src="{{js_url()}}social.js"></script>
-    <script>
-        jQuery(document).ready(function($) {
-           $('.share').ShareLink({
-                // se deben llenar los datos para compartir con los botones
-                title: 'Lorem', 
-                text: 'Lorem ipsum dolor sit amet', 
-                image: '', 
-                url: '', 
-                width: 640, 
-                height: 480 
-            }) 
-        });
+    <script src="{{ assets_url() }}swipebox/js/jquery.swipebox.min.js">
     </script>
+    {% include "components/script.html.twig" %}
+    <script src="{{js_url()}}inicio-movil.js"></script>
 {% endblock javascripts %}
