--- a/res/application/views/components/script.html.twig
+++ b/res/application/views/components/script.html.twig
@@ -3,12 +3,13 @@
     jQuery(document).ready(function($) {
        $('.share').ShareLink({
             // se deben llenar los datos para compartir con los botones
-            title: 'Lorem', 
-            text: 'Lorem ipsum dolor sit amet', 
-            image: '', 
-            url: '', 
+            title: '{{empresa.nombre}} en Proveedor.com.co', 
+            text: '{{empresa.tipo}} {{empresa.nombre}} en {{usuario.ciudad}}, {{usuario.departamento}}, {{usuario.pais}}', 
+            image: '{{base_url()}}uploads/logos/{{empresa.logo}}', 
+            url: '{{base_url()}}empresa/{{tap}}/{{empresa.id}}', 
             width: 640, 
             height: 480 
         }) 
     });
 </script>
+
