Corregido el problema con el botón de email

--- a/res/application/views/components/script.html.twig
+++ b/res/application/views/components/script.html.twig
@@ -4,7 +4,7 @@
        $('.share').ShareLink({
             // se deben llenar los datos para compartir con los botones
             title: '{{empresa.nombre}} en Proveedor.com.co', 
-            text: '{{empresa.tipo}} {{empresa.nombre}} en {{usuario.ciudad}}, {{usuario.departamento}}, {{usuario.pais}}', 
+            text: '{{empresa.tipo}} {{empresa.nombre}}', 
             image: '{{base_url()}}uploads/logos/{{empresa.logo}}', 
             url: '{{base_url()}}empresa/{{tap}}/{{empresa.id}}', 
             width: 640, 
